# clipp

./: README-PYPI.rst  README.rst  mkdocs.py  mkdocs.sh  pyproject.toml
clipp/: __init__.py  core.py
docs/: .buildinfo  clipp.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docsrc/: conf.py
tests/: conftest.py  test_core.py
