[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clipp"
version = "0.0.1"
description = """A POSIX-compliant CLI parser."""
requires-python = ">=3.11"
license = {text = "GNU General Public License, Version 3"}

[tool.setuptools]
py-modules = ["clipp"]
