[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clipp"
authors = ["Ben Ohling"]
version = "0.0.1"
license = {text = "GNU General Public License, Version 3"}
description = """A POSIX-compliant CLI parser."""
requires-python = ">=3.11"

[tool.setuptools]
py-modules = ["clipp"]
