[build-system]
requires = ["pip", "setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "clipp"
license = {text = "GNU General Public License, Version 3"}
description = """A POSIX-compliant CLI parser."""
requires-python = ">=3.11"
dynamic = ["version"]

[tool.setuptools]
packages = ["clipp"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "clipp.__init__.__version__"}
